--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,10 @@
         <meta charset="utf-8">
         <title>Angular 5 Starter</title>  
         <link rel="stylesheet" href="app/app.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
-    <body class="width-100">
+    <body class="white-background-color width-100">
         <app>
             <div class="loader-spinner loader-large" style="position: absolute; top: 35%; left: 48%;">
                 <div class="loader-spinner-wrapper">
