--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
         <base href="/">
         <meta charset="utf-8">
         <title>Angular 5 Starter</title>  
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="app/app.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
